apps/base/speedtest/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest-route
  namespace: speedtest
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: ingress-traefik
  hostnames:
  - "speedtest.flux.techbabette.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: speedtest
      port: 80
