apps/base/speedtest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: speedtest
  namespace: speedtest
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: traefik-local
  tls:
  - hosts:
    - speedtest.flux.techbabette.com
    secretName: speedtest-cert 
  rules:
  - host: speedtest.flux.techbabette.com
    http:
      paths:
      - backend:
          service:
            name: speedtest
            port:
              number: 80
        path: /
        pathType: Prefix 
status:
  loadBalancer: {}
